# DependencyExtractor

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
dextractor/: __init__.py  expressions.py
dextractor/src/: exclusions.py  languages.py  parser.py
tests/: README.md  __init__.py  test-analyse.py  test-analyze.py
tests/data/: README.md
