[metadata]
# replace with your username:
name = dextractor
version = 0.0.1
author = Alexandros Raikos
author_email = alexandros@araikos.gr
description = A Python library which extracts library dependencies from source files written in most mainstream programming languages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexandrosraikos/dependency-extractor
project_urls =
    Bug Tracker = https://github.com/alexandrosraikos/dependency-extractor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6